packages/ui/lit-grid/src/dx-grid.pcss
dx-grid {
  display: contents;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.dx-grid {
  position: fixed;
  inset: 0;
  display: grid;
  grid-template-columns: min-content 1fr min-content;
  grid-template-rows: min-content 1fr min-content;
  font-variant-numeric: tabular-nums;
}

.dx-grid__scrollbar__thumb {
  height: 1rem;
  width: 1rem;
  background: var(--dx-grid-thumb, var(--dx-separator));
}

.dx-grid__corner,
.dx-grid__scrollbar {
  background: var(--dx-grid-corner, var(--dx-hoverSurface));
}

.dx-grid__columnheader__content,
.dx-grid__rowheader__content,
.dx-grid__content {
  display: grid;
  gap: 1px;
  background: var(--dx-separator);
  inline-size: min-content;
  block-size: min-content;
}

.dx-grid__columnheader,
.dx-grid__rowheader,
.dx-grid__viewport {
  overflow: hidden;
}

.dx-grid__columnheader__content {
  border-block-end: 2px solid var(--dx-separator);
  grid-template-columns: repeat(99, 64px);
}

.dx-grid__rowheader__content {
  border-inline-end: 2px solid var(--dx-separator);
  grid-template-columns: min-content;
  text-align: end;
}

.dx-grid {
  [role='gridcell'], [role='columnheader'], [role='rowheader'] {
    background: var(--dx-base);
    padding: 2px;
    box-sizing: border-box;
    &[inert] {
      visibility: hidden;
    }
  }
}

.dx-grid__columnheader__content,
.dx-grid__rowheader__content {
  & > [role='columnheader'], &> [role='rowheader'] {
    position: relative;
    & > button.dx-grid__resize-handle {
      position: absolute;
      background: transparent;
      &:hover, &:focus {
        background: var(--dx-hoverSurface)
      }
    }
  }
}

.dx-grid__columnheader__content > [role='columnheader'] > button.dx-grid__resize-handle {
  inset-block: 0;
  inset-inline-end: 0;
  inline-size: .5rem;
  cursor: col-resize;
}

.dx-grid__rowheader__content > [role='rowheader'] > button.dx-grid__resize-handle {
  inset-inline: 0;
  inset-block-end: 0;
  block-size: .5rem;
  cursor: row-resize;
}

